--- a/chat-project/src/pages/Component/Component.module.css
+++ b/chat-project/src/pages/Component/Component.module.css
@@ -1,11 +1,15 @@
 .page-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
+    background-color: #777777;
 }
 
 .content {
     flex: 1;
-    background-color: #000000;
+    display: flex;
+    flex-direction: column;
     padding: 20px;
+    gap: 10px;
+    background-color: #ffffff;
 }
