--- a/chat-project/src/components/shared/Button/Button.module.css
+++ b/chat-project/src/components/shared/Button/Button.module.css
@@ -5,7 +5,8 @@
     border-radius: 15px;
     padding: 10px 15px;
     cursor: pointer;
-    width: 200px;
+    width: 280px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
