--- a/chat-project/src/components/shared/CircleButton/CircleButton.module.css
+++ b/chat-project/src/components/shared/CircleButton/CircleButton.module.css
@@ -1,6 +1,6 @@
 .circleButton {
-    width: 40px;
-    height: 40px;
+    height: 100%;
+    aspect-ratio: 1/1;
     border-radius: 50%;
     border: none;
     display: flex;
