--- a/chat-project/src/components/shared/DropMenu/DropMenu.module.css
+++ b/chat-project/src/components/shared/DropMenu/DropMenu.module.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 56px;
+    border-radius: 50px;
     background-color: #f7f7f7;
-    width: 530px;
-    height: 67px;
+    width: 520px;
+    height: 57px;
 }
 
 .tabList {
@@ -16,9 +16,9 @@
 
 .tab {
     color: #8a8a8a;
-    font-size: 1.3rem;
     width: 170px;
-    height: 67px;
+    height: 47px;
+    font-size: 18px;
 }
 
 .selected {
@@ -26,8 +26,12 @@
     background-color: #000000;
     border-radius: 56px;
     width: 160px;
-    height: 55px;
+    height: 47px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.selected:focus {
+    outline: none;
 }
