--- a/chat-project/src/pages/Chat/Chat.module.css
+++ b/chat-project/src/pages/Chat/Chat.module.css
@@ -9,6 +9,15 @@
     padding: 1rem;
 }
 
+.chatSection {
+    flex: 1; /* 나머지 공간 채우기 */
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    overflow: hidden;
+    justify-content: space-between;
+    padding: 30px;
+}
 .headerSection {
     display: flex;
     flex-direction: column;
@@ -25,4 +34,58 @@
     align-items: center;
     width: 100%;
     gap: 1rem;
+}
+
+.chatInit{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.chatInit img{
+    margin-bottom: 100px;
+    width: 200px;
+
+}
+
+.initTitle{
+    font-size: 38px;
+    font-weight: 500;
+    margin-bottom: 30px;
+}
+
+.initSubtitle{
+    font-size: 20px;
+    color: #767676;
+    max-width: 530px;
+    text-align: center;
+}
+
+.gradientText{
+    font-size:inherit;
+    background: linear-gradient(90deg, #000000, #974FFF);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.inputContainer{
+
+}
+
+.chatHistory{
+    padding: 30px;
+    flex-grow: 1;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+}
+
+.chatTitle{
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    text-align: left;
 }
