--- a/chat-project/src/components/Input/Input.module.css
+++ b/chat-project/src/components/Input/Input.module.css
@@ -2,13 +2,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(189, 186, 186);
+    background-color: #e3e3e3;
     border-radius: 39px;
     padding: 5px;
     gap: 5px;
     width: 100%;
     max-width: 600px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    height: 68px;
+}
+
+.inputContainer input {
+    height: 100%;
+    font-size: 20px;
+}
+.inputContainer input::placeholder {
+    color: #424242;
+    font-size: 20px;
+    font-style: normal;
 }
 
 .inputField {
@@ -18,15 +29,10 @@
     padding: 10px;
     font-size: 14px;
     outline: none;
-    background-color: rgb(189, 186, 186);
+    background-color: #e3e3e3;
 }
 
 .label {
     flex-grow: 1;
     text-align: inherit;
-}
-
-.inputField::placeholder {
-    color: #aaa;
-    font-style: italic;
 }
