--- a/chat-project/src/components/SideBar/SideBar.module.css
+++ b/chat-project/src/components/SideBar/SideBar.module.css
@@ -9,12 +9,20 @@
     padding: 1rem;
 }
 
-.chatSection {
-    flex: 1; /* 나머지 공간 채우기 */
+.headerSection {
     display: flex;
     flex-direction: column;
-    padding: 1rem;
-    overflow: hidden;
-    justify-content: space-between;
-    padding: 30px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
+}
+
+.footerSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
 }
